[MS-1429] fix: updated spacing in Header

--- a/src/sass/organism/new-page-header.scss
+++ b/src/sass/organism/new-page-header.scss
@@ -1,6 +1,7 @@
 @import "@/sass/atom/base-new-vars";
 
 .new-page-header {
+    margin: 11.5rem auto !important;
     h1,
     h2,
     h3,
